[gd_scene load_steps=5 format=3 uid="uid://cw4fhi7ycpww5"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_tnrwb"]
[ext_resource type="PackedScene" uid="uid://bf4dahs3p0bhf" path="res://scenes/ui/algorithm_page.tscn" id="2_2e56p"]
[ext_resource type="FontFile" uid="uid://cihxo3bxxdhvh" path="res://assets/fonts/NewCM10-Regular.otf" id="2_jiubq"]

[sub_resource type="LabelSettings" id="LabelSettings_5qv0w"]
font = ExtResource("2_jiubq")
font_size = 36
font_color = Color(0, 0, 0, 1)

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tnrwb")
ss_scene = ExtResource("2_2e56p")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 127.0
grow_horizontal = 2
text = "Algorithm Visualizer"
label_settings = SubResource("LabelSettings_5qv0w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -499.0
offset_right = 224.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SortingAlgorithms" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Sorting Algorithms"

[node name="SelectionSort" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Selection Sort"

[node name="InsertionSort" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Insertion Sort"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Blind75" type="Button" parent="VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Blind 75"

[node name="Test2" type="Button" parent="VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Temp 2"

[node name="Test3" type="Button" parent="VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Temp 2"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/SortingAlgorithms" to="." method="_on_sorting_algorithms_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/SelectionSort" to="." method="_on_selection_sort_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/Blind75" to="." method="_on_blind_75_pressed"]
